--- a/src/scss/_webfonts.scss
+++ b/src/scss/_webfonts.scss
@@ -1,29 +1,27 @@
 @font-face {
     font-family: 'camingocoderegular';
-    src: url('CamingoCode-Regular-webfont.woff') format('woff');
+    src: url('../fonts/CamingoCode-Regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'camingocodeitalic';
-    src: url('CamingoCode-Italic-webfont.woff') format('woff');
+    src: url('../fonts/CamingoCode-Italic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'camingocodebold_italic';
-    src: url('CamingoCode-BoldItalic-webfont.woff') format('woff');
+    src: url('../fonts/CamingoCode-BoldItalic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
-
-
 @font-face {
     font-family: 'camingocodebold';
-    src: url('CamingoCode-Bold-webfont.woff') format('woff');
+    src: url('../fonts/CamingoCode-Bold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
