--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -39,3 +39,17 @@
 	min-width: 100%;
 	margin-right: 0;
 }
+
+
+h1 {
+	@apply text-5xl
+}
+h2 {
+	@apply text-4xl
+}
+h3 {
+	@apply text-3xl
+}
+h4 {
+	@apply text-2xl
+}
