--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -18,7 +18,6 @@ body {
 	width: 100vw;
 	max-width: 100vw;
 	overflow: hidden;
-	@apply bg-main-sand;
 }
 
 // body::-webkit-scrollbar {
@@ -38,6 +37,12 @@ body {
 // 	outline: 1px solid slategrey;
 // }
 
+#template {
+	@apply 
+	bg-main-sand dark:bg-zinc-700
+
+}
+
 #TemplateData {
 	height: calc(100vh - 40px);
 	width: 100%;
@@ -51,43 +56,59 @@ body {
 #TemplateTrackSettings {
 	height: 100%;
 	-ms-overflow-style: none;
-	overflow-y: auto;
-	overflow-x: auto;
+	overflow: auto;
 }
 
-.TrackList, .TrackSettings {
-	@apply bg-stone-300 dark:bg-zinc-800; 
-	@apply text-zinc-900 dark:text-zinc-200;
-	@apply transition-all duration-1000;
+.TrackList, 
+.TrackSettings {
+	@apply 
+    bg-stone-300 dark:bg-zinc-800
+    text-zinc-900 dark:text-zinc-200
 }
 
-#TemplateTracks tr, 
-#TemplateTrackSettings tr,
- {
-	@apply hover:bg-zinc-800 dark:hover:bg-zinc-600; 
-	@apply text-zinc-900 dark:text-zinc-200 dark:hover:text-zinc-50;
-
-}
-#TemplateTracks th, #TemplateTrackSettings th{
-	@apply border-2;
-
-	@apply text-zinc-900;
-	@apply border-zinc-100 border-b-transparent dark:border-zinc-400 dark:border-b-transparent;
-	@apply bg-zinc-200 dark:bg-zinc-600;
-	
-	@apply transition-all duration-200;
-}
-#TemplateTracks td, #TemplateTrackSettings td {
-	@apply border-2; 
-
-	@apply border-zinc-400 dark:border-zinc-600;
-	@apply bg-zinc-300 dark:bg-zinc-900;
-	@apply transition-all duration-200;
+.trackTr, 
+.settingsTr,
+.rangeTr{
+	@apply
+	bg-zinc-300 dark:bg-stone-800 hover:bg-zinc-500 dark:hover:bg-zinc-400 
+	hover:text-zinc-50 dark:hover:text-zinc-50
 }
 
-.rangeRow {
-	@apply bg-zinc-600;
-	@apply transition-all duration-200;
+.trackTh, .settingsTh,
+.trackTd, .settingsTd,
+.rangeTd, .rangeTdEmpty {
+	@apply 
+	border-2
+}
+
+.trackTh, 
+.settingsTh{
+	@apply 
+	border-zinc-100 border-b-transparent dark:border-zinc-400 dark:border-b-transparent
+	bg-zinc-200 dark:bg-zinc-600
+	font-bold dark:font-normal
+	p-1
+}
+
+.trackTd, .settingsTd,
+.rangeTd, .rangeTdEmpty {
+	@apply 
+	border-zinc-400 dark:border-zinc-600
+	p-0.5
+}
+
+.rangeTdEmpty {
+	@apply
+	bg-zinc-400 dark:bg-zinc-600
+}
+
+.inputTd {
+	@apply 
+	hover:placeholder-zinc-200 dark:hover:placeholder-zinc-600
+	placeholder-zinc-400 dark:placeholder-zinc-500
+	focus:placeholder-zinc-500
+	focus:text-zinc-900
+	pl-1
 }
 
 
