--- a/src/assets/fonts.css
+++ b/src/assets/fonts.css
@@ -1,27 +1,27 @@
 @font-face {
     font-family: 'camingocoderegular';
-    src: url('../fonts/CamingoCode-Regular-webfont.woff') format('woff');
+    src: url('./fonts/CamingoCode-Regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'camingocodeitalic';
-    src: url('../fonts/CamingoCode-Italic-webfont.woff') format('woff');
+    src: url('./fonts/CamingoCode-Italic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'camingocodebold_italic';
-    src: url('../fonts/CamingoCode-BoldItalic-webfont.woff') format('woff');
+    src: url('./fonts/CamingoCode-BoldItalic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'camingocodebold';
-    src: url('../fonts/CamingoCode-Bold-webfont.woff') format('woff');
+    src: url('./fonts/CamingoCode-Bold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
