--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,8 @@
 @tailwind base;
 @tailwind components;
 @import 'fonts';
+@import '@fortawesome/fontawesome-free/css/all.min.css';
+
 
 *,
 *::after,
