more work on getting this all transfered to backend/prisma.. so far I can create an item without too much hassle

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,11 +13,11 @@
 }
 
 body {
-  height: 100vh;
+  /*height: 100vh;
   max-height: 100vh;
   width: 100vw;
   max-width: 100vw;
-  overflow: hidden;
+  overflow: hidden;*/
   font-family: 'caviar_dreamsregular';
 }
 
