blurred unavailable actions for the time being in contextMenu, also added a counter for adding items.
pushed settings update/set from backend to mutationcontext for use in the context menu to start

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -74,6 +74,11 @@ details[open] summary ~ * {
   animation: sweep 1s ease-in-out;
 }
 
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button {  
+   opacity: 1;   
+}
+
 @keyframes sweep {
   0% {
     opacity: 0;
