refactor: enhance InputSelectMultiple component and improve select list handling

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -94,4 +94,13 @@
     @apply h-[100px]
 	cursor-pointer;
   }
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 }
